docs: Add comprehensive project documentation
- Main README with system architecture overview
- Step-by-step deployment guide for all components
- Gitignore for Python, venv, env

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-.vscode
-data
+ Python
+__pycache__/
+.venv/
+
+# Environment Variables
+.env
+.env.local
+
+# Docker
+docker-compose.override.yml
+
+./ml-training/.venv/
